views/css/style.css
/* ... */
.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  top: 2px;
  left: 2px;
  background-color: #222;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #436e9c;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
  height: 30px;
  width: 56px;
}

.slider.round:before {
  border-radius: 50%;
}

.circle-wrap {
  border: 3px solid rgb(255, 255, 255, 0.6);
  border-radius: 50%;
  width: 60px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  right: 20px;
  bottom: 20px;
  background-color: #222;
  cursor: pointer;
}

.circle-wrap i {
  font-size: 25px;
}

.popup {
  animation: backInLeft 1.2s;
  visibility: hidden;
  position: absolute;
  top: 30%;
  right: 35%;
  display: flex;
  align-items: center;
  justify-self: center;
  z-index: 100;
  width: 40rem;
}

.show {
  visibility: visible;
}

@keyframes backInLeft {
  0% {
    transform: translateX(-2000px) scale(0.7);
    opacity: 0.8;
  }

  80% {
    transform: translateX(0px) scale(0.7);
    opacity: 0.8;
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.blur {
  transition: 0.2s;
  filter: blur(30px);
  pointer-events: none;
  user-select: none;
}

.unblur {
  transition: 0.2s;
  filter: blur(0); /* Removes the blur effect */
}

.popup .icon {
  position: absolute;
  top: 18px;
  right: 16px;
  cursor: pointer;
}

.popup .icon:hover {
  color: #ddd;
}

.show-arrow {
    opacity: 0;
    transform: translateY(20px);
    transition: opacity 2s ease-in, transform 2s ease-in;
}

.hide {
  display: none;
}

.big-logo {
  font-weight: 800;
  font-size: 120px;
  letter-spacing: 60px;
  transition: 1.5s;
  background: linear-gradient(80deg, #8EC5FC 0%, #E0C3FC 85%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  display: inline-block;
}

.big-logo:hover {
  letter-spacing: 5px;
  transition: 0.5s;
}

.big-logo {
  border-right: solid 3px #E0C3FC;
  white-space: nowrap;
  overflow: hidden;    
}

/* Animation */
.big-logo {
  animation: animated-text 2s steps(500,end) 1s 1 normal both,
             animated-cursor 800ms steps(29,end) infinite;
}

/* text animation */

@keyframes animated-text{
  from{width: 0;}
  to{width: 65%}
}

/* cursor animations */

@keyframes animated-cursor{
  from{border-right-color: #666}
  to{border-right-color: transparent;}
}

@media screen and (max-width:1400px) {

  /* smartphones, Android phones, landscape iPhone, iPad and small PCs */
  .form-card {
    width: 98%;
  }

  .popup {
    width: 100%;
    top: 0;
    right: 0;
    height: 100vh;
  }

  .big-logo {
    rotate: 90deg;
    font-size: 50px;
  }
}

